--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,7 @@
         {{ if $patterns }}
           <div class="hextra-feature-grid hx:grid hx:sm:max-lg:grid-cols-2 hx:max-sm:grid-cols-1 hx:gap-4 hx:w-full not-prose" style="--hextra-feature-grid-cols:3">
             {{ range $patterns.ByParam "weight" }}
-              <a href="{{ .Permalink }}" style="background:radial-gradient(ellipse at 50% 80%,rgba(194,97,254,.15),hsla(0,0%,100%,0))" class="hx:aspect-auto hx:md:aspect-[1.1/1] hx:max-md:min-h-[340px] hextra-feature-card not-prose hx:block hx:relative hx:overflow-hidden hx:rounded-3xl hx:border hx:border-gray-200 hx:hover:border-gray-300 hx:dark:border-neutral-800 hx:dark:hover:border-neutral-700 hx:before:pointer-events-none hx:before:absolute hx:before:inset-0 hx:before:bg-glass-gradient">
+              <a href="{{ .Permalink }}" class="hx:aspect-auto hx:md:aspect-[1.1/1] hx:max-md:min-h-[340px] hextra-feature-card not-prose hx:block hx:relative hx:overflow-hidden hx:rounded-3xl hx:border hx:border-gray-200 hx:hover:border-gray-300 hx:dark:border-neutral-800 hx:dark:hover:border-neutral-700 hx:before:pointer-events-none hx:before:absolute hx:before:inset-0 hx:before:bg-glass-gradient">
                 <div class="hx:relative hx:w-full hx:p-6">
                   <h3 class="hx:text-2xl hx:font-medium hx:leading-6 hx:mb-2 hx:flex hx:items-center">
                     <span>{{ .Title }}</span>
@@ -32,7 +32,7 @@
                     {{ .Params.subtitle }}
                   </p>
                 </div>
-                <img src="{{ .Params.image }}" class="hx:absolute hx:max-w-none hx:top-[40%] hx:left-[24px] hx:w-[180%] hx:sm:w-[110%] hx:dark:opacity-80" alt="{{ .Title }}">
+                <img src="{{ .Params.image }}" class="" alt="{{ .Title }}">
               </a>
             {{ end }}
           </div>
